[gd_scene load_steps=5 format=3 uid="uid://c1qmbm8wd442o"]

[ext_resource type="Script" path="res://Scenes/ui.gd" id="1_k08io"]
[ext_resource type="FontFile" uid="uid://da74gwoduep04" path="res://Assets/joystix monospace.otf" id="2_wu3tk"]
[ext_resource type="Texture2D" uid="uid://wh1lgxgs27cs" path="res://Assets/Sprites/blockselector.png" id="12_m3uxq"]
[ext_resource type="Script" path="res://Scenes/Cursor.gd" id="13_xebhm"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_k08io")

[node name="PointsScreen" type="MarginContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 32

[node name="Pointslabel" type="Label" parent="PointsScreen"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_wu3tk")
theme_override_font_sizes/font_size = 80
text = "0"

[node name="SkinScreen" type="MarginContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Panel" type="Panel" parent="SkinScreen"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SkinScreen"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="GridContainer" type="GridContainer" parent="SkinScreen/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 6

[node name="Cursor" type="Sprite2D" parent="SkinScreen/MarginContainer/GridContainer"]
visible = false
position = Vector2(-163, -32)
texture = ExtResource("12_m3uxq")
script = ExtResource("13_xebhm")

[node name="SelectButton" type="Button" parent="SkinScreen/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_wu3tk")
theme_override_font_sizes/font_size = 30
text = "Select"

[node name="PurchaseButton" type="Button" parent="SkinScreen/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_wu3tk")
theme_override_font_sizes/font_size = 30
text = "Purchase"

[node name="BackButton" type="Button" parent="SkinScreen/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_wu3tk")
theme_override_font_sizes/font_size = 25
text = "<--"

[node name="MainMenu" type="MarginContainer" parent="."]
offset_left = 64.0
offset_top = 64.0
offset_right = 790.0
offset_bottom = 432.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 32

[node name="Panel" type="Panel" parent="MainMenu"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="StartButton" type="Button" parent="MainMenu/Panel/MarginContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_wu3tk")
theme_override_font_sizes/font_size = 30
text = "START"

[node name="SkinsButton" type="Button" parent="MainMenu/Panel/MarginContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_wu3tk")
theme_override_font_sizes/font_size = 30
text = "SKINS"

[node name="TitleLabel" type="Label" parent="MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_wu3tk")
theme_override_font_sizes/font_size = 45
text = "Block Flip
"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="MainMenu"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_wu3tk")
theme_override_font_sizes/font_size = 30
text = "Last Score: 0
High Score: 0"
horizontal_alignment = 1

[connection signal="pressed" from="SkinScreen/MarginContainer/SelectButton" to="." method="_on_select_button_pressed"]
[connection signal="pressed" from="SkinScreen/MarginContainer/PurchaseButton" to="." method="_on_purchase_button_pressed"]
[connection signal="pressed" from="SkinScreen/MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MainMenu/Panel/MarginContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MainMenu/Panel/MarginContainer/SkinsButton" to="." method="_on_skins_button_pressed"]
